--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,6 +16,7 @@ h1 {
 }
 h2 {
   font-family: var(--default-font-family);
+  font-size: 50px;
 
   color: var(--primary-color);
 }
@@ -25,7 +26,11 @@ h3 {
   color: var(--primary-color);
 }
 p {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--primary-color);
 }
+
 .hero {
   background: var(--header-color);
   text-align: center;
@@ -42,6 +47,15 @@ p {
   padding: 20px;
 }
 .btn-branding {
+  background: var(--accent-color);
+  color: var(--primary-color);
+  font-size: 18px;
+  border-radius: 4px;
+  padding: 10px 20px;
+  margin: 0 auto;
+}
+
+.btn-branding-outline {
   background: var(--accent-color);
   color: var(--primary-color);
   font-size: 18px;
