--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -63,3 +63,15 @@ p {
   padding: 10px 20px;
   margin: 0 auto;
 }
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+}
