--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,7 +30,8 @@ p {
   line-height: 1.5;
   color: var(--primary-color);
 }
-
+img {
+}
 .hero {
   background: var(--header-color);
   text-align: center;
@@ -45,6 +46,28 @@ p {
   font-size: 50px;
   margin: 0;
   padding: 20px;
+}
+.about-section {
+  padding: 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 40px;
+}
+.about-section p {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.about-section img {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 8px;
+}
+.about-section-content {
+  margin: 30px;
 }
 .btn-branding {
   background: var(--accent-color);
@@ -73,5 +96,9 @@ p {
   }
   .hero {
     padding: 80px 20px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
