--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -60,10 +60,12 @@ img {
 .content h3 {
   font-size: 24px;
   font-family: var(--default-font-family);
+  display: block;
 }
 .content p {
   font-size: 18px;
   font-family: var(--default-font-family);
+  display: block;
 }
 .content-container img {
   max-width: 400px;
